Switched from kotlin-jslib to kotlin-js-library, which seems to be the same thing

--- a/src/main/resources/beholder/backend/web/index.html
+++ b/src/main/resources/beholder/backend/web/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Beholder</title>
+
+    <script src="kotlin-lib-ecma5.js"></script>
+    <script src="kotlin-lib.js"></script>
+    <script src="kotlin-maps.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 Hello bloody world!
