Interoperability of Kotlin code with JavaScript environment

--- a/src/main/resources/beholder/backend/web/index.html
+++ b/src/main/resources/beholder/backend/web/index.html
@@ -7,6 +7,7 @@
     <script src="kotlin-lib-ecma5.js"></script>
     <script src="kotlin-lib.js"></script>
     <script src="kotlin-maps.js"></script>
+    <script src="monkey-patches.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
