--- a/src/main/resources/beholder/backend/web/index.html
+++ b/src/main/resources/beholder/backend/web/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <title>Beholder</title>
 
-    <script src="kotlin-lib-ecma5.js"></script>
-    <script src="kotlin-lib.js"></script>
-    <script src="kotlin-maps.js"></script>
-    <script src="monkey-patches.js"></script>
-    <script src="script.js"></script>
+    <script type="text/javascript">
+        var beholderApiKey = "{apiKey}";
+    </script>
+
+    <script type="text/javascript" src="kotlin-lib-ecma5.js"></script>
+    <script type="text/javascript" src="kotlin-lib.js"></script>
+    <script type="text/javascript" src="kotlin-maps.js"></script>
+    <script type="text/javascript" src="monkey-patches.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 Hello bloody world!
